kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yourapp
  namespace: yourapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yourapp
  template:
    metadata:
      labels:
        app: yourapp
    spec:
      containers:
        - name: yourapp
          image: 'y16me910/yourapp:latest'
          ports:
            - containerPort: 80
