kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yourapp
  namespace: yourapp
spec:
  type: NodePort
  selector:
    app: yourapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
