kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservice
  namespace: yourapp
spec:
  ingressClassName: nginx
  rules:
  - host: yourapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: yourapp
          servicePort: 80
